@@ -2,10 +2,10 @@ package com.auth.service;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Locale;
 import java.util.Set;
+import java.util.HashSet;
+import java.util.concurrent.atomic.AtomicReference;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -22,8 +22,7 @@ public class DepartmentCatalog {
 
     private static final Logger log = LoggerFactory.getLogger(DepartmentCatalog.class);
 
-    private volatile Set<String> departmentIds;
-    private volatile boolean hasDepartmentData;
+    private final AtomicReference<Set<String>> departmentIds;
     private final String departmentsFilePath;
     private final ResourceLoader resourceLoader;
     private final ObjectMapper objectMapper;
@@ -35,23 +34,22 @@ public class DepartmentCatalog {
         this.departmentsFilePath = departmentsFilePath;
         this.resourceLoader = resourceLoader;
         this.objectMapper = objectMapper;
-        this.departmentIds = loadDepartmentIds(this.departmentsFilePath, this.resourceLoader, this.objectMapper);
-        this.hasDepartmentData = !this.departmentIds.isEmpty();
+        this.departmentIds = new AtomicReference<>(loadDepartmentIds(this.departmentsFilePath, this.resourceLoader, this.objectMapper));
     }
 
     public boolean isValid(String departmentId) {
         if (departmentId == null || departmentId.trim().isEmpty()) {
             return false;
         }
-        if (!hasDepartmentData) {
+        Set<String> ids = departmentIds.get();
+        if (ids.isEmpty()) {
             return false;
         }
-        return departmentIds.contains(departmentId.trim().toUpperCase(Locale.ROOT));
+        return ids.contains(departmentId.trim().toUpperCase(Locale.ROOT));
     }
 
     public synchronized void refresh() {
-        this.departmentIds = loadDepartmentIds(this.departmentsFilePath, this.resourceLoader, this.objectMapper);
-        this.hasDepartmentData = !this.departmentIds.isEmpty();
+        this.departmentIds.set(loadDepartmentIds(this.departmentsFilePath, this.resourceLoader, this.objectMapper));
     }
 
     private Set<String> loadDepartmentIds(String path, ResourceLoader loader, ObjectMapper mapper) {
@@ -64,7 +62,7 @@ public class DepartmentCatalog {
                 log.info("Using classpath departments file departments-config/departments-db.json");
             } else {
                 log.warn("Departments file not found at {} and no classpath fallback available", path);
-                return Collections.emptySet();
+                return Set.of();
             }
         }
 
@@ -74,10 +72,10 @@ public class DepartmentCatalog {
             collectIds(root.get("centralGovernmentDepartments"), ids);
             collectIds(root.get("stateGovernmentDepartments"), ids);
             log.info("Loaded {} department ids for validation", ids.size());
-            return ids;
+            return copyAsImmutable(ids);
         } catch (IOException ex) {
             log.warn("Failed to read departments file {}: {}", path, ex.getMessage());
-            return Collections.emptySet();
+            return Set.of();
         }
     }
 
@@ -99,5 +97,12 @@ public class DepartmentCatalog {
             return path;
         }
         return "file:" + path;
+    }
+
+    private Set<String> copyAsImmutable(Set<String> ids) {
+        if (ids.isEmpty()) {
+            return Set.of();
+        }
+        return Set.copyOf(ids);
     }
 }
